<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="data"
                type="com.yemeksepeti.challenge.models.UserDetailsModel"/>
    </data>
<androidx.core.widget.NestedScrollView
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent">

<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:layout_margin="15dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/girl" />

        <ImageButton
            android:id="@+id/changeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/profileImage"
            android:layout_alignEnd="@+id/profileImage"
            android:layout_alignRight="@+id/profileImage"
            android:layout_alignParentTop="true"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="-3dp"
            android:layout_marginRight="-3dp"
            android:background="@android:color/transparent"
            app:srcCompat="@mipmap/addicon" />

    </RelativeLayout>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputname"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="4dp"

        android:background="@drawable/edittextbackground"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <EditText
            android:id="@+id/editname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_margin="10dp"
            android:enabled="false"
            android:text="@{data.firstName}"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/lastname"
        android:enabled="false"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputlastname"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittextbackground"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <EditText
            android:id="@+id/editlastname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_margin="10dp"
            android:enabled="false"
            android:text="@{data.lastName}"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputdate"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittextbackground"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <EditText
            android:id="@+id/editdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:text="@{data.birthDay.toString()}"
            android:background="@android:color/transparent"
            android:layout_margin="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputphone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/edittextbackground"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

        <EditText
                android:id="@+id/editphone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_margin="10dp"
                android:text="@{data.phoneNumber}"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputemail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/edittextbackground"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <EditText
            android:id="@+id/editemail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:layout_margin="10dp"
            android:enabled="false"
            android:text="@{data.email}"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/adress"

            android:textColor="@color/black"
            android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputadress"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/edittextbackground"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

        <EditText
                android:id="@+id/editadress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_margin="10dp"
                android:gravity="top|left"
                android:padding="8dp"
                android:text="@{data.adress}"
                android:inputType="textMultiLine"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout></androidx.core.widget.NestedScrollView></layout>